--- a/pages/EmployeeEntry.html
+++ b/pages/EmployeeEntry.html
@@ -22,7 +22,7 @@
         </div>
     </header>
     <div id="formId" class="form-content">
-        <form class="form" action="#" onreset="resetForm()" onsubmit="save();return fasle">
+        <form class="form" action="#" onreset="resetForm()" onsubmit="save()">
             <div class="form-head">
                 Employee Payroll form </div>
             <div class="row-content">
